--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.0",
     "bootstrap": "^4.6.0",
+    "dotenv": "^8.2.0",
     "js-cookie": "^2.2.1",
     "react": "^16.14.0",
     "react-cookie": "^4.0.3",
