--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.14.0",
     "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1",
+    "react-phone-number-input": "^3.1.19",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
